# reopt

./: .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .travis.yml  LICENSE  Makefile  README.md  azure-pipelines.yml  build-sandbox.sh  cabal.project  cabal.project.freeze  cabal.project.freeze.ghc.8.10.4  cabal.project.freeze.ghc.8.10.7  cabal.project.freeze.ghc.8.8.3  cabal.project.freeze.ghc.8.8.4  cabal.project.freeze.ghc.9.2.6  cabal.project.freeze.ghc.9.2.8  cabal.project.freeze.ghc.9.4.8  cabal.project.freeze.ghc.9.6.4  cabal.project.freeze.ghc.9.8.2  cabal.project.werror  cabal.project.werror-all  dump_instr.sh  fourmolu.yaml  generate_init_instructions.sh  hie.yaml  nweb-diff.html  passers.txt  pointer-with-offset-diff.html  reopt.cabal  reopt_explore_tests.sh  run-llvm.sh  run-tests.sh  run_centos7_benchmarks.sh  stack-8.4.yaml  stack-8.6.yaml  stack-with-arm.yaml  stack-without-arm.yaml  stack.yaml  (+1 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
annotations/: reopt-vcg-ann.cabal
annotations/src/Reopt/VCG/: Annotations.hs  SMTParser.hs
bin_to_smt/: Main.hs
containers/dev/: Dockerfile
containers/dev-with-builds/: Dockerfile  README.md
containers/eval/: .gitignore  Dockerfile
containers/eval-with-examples/: Dockerfile  README.md
containers/occam/: Dockerfile
containers/vcg-dev/: Dockerfile
doc/: instrs.txt
documentation/: ArgumentAnalysis.md  DESIGN.md  Discovery.md  FunctionRecovery.md  HeaderResolution.md  LLVMBitcodeCompilation.md  ModuleConstraintsGeneration.md  Recovery.md
dump_debug_data/: Main.hs
dump_vtables/: Main.hs
examples/: Makefile  division_by_zero  division_by_zero.c  libnewt.so.0.52  nweb23_static_freebsd  nweb23_ubuntu_12_4_32  simple  simple.cpp  test_1_a  test_1_b  test_add  test_mul  thttpd
examples/add/: Makefile  add.c  diet
examples/empty_main/: Makefile  README.md
examples/fib/: Makefile
examples/hello_world/: .gitignore  Makefile  README  diet_redir.yaml  goodbye_world.c  hello_world.c  hello_world_example.sh  hello_world_ubuntu_64_lts_12_04_diet  hello_world_ubuntu_64_lts_12_04_glibc  hello_world_ubuntu_64_lts_12_04_musl  main.c  main_ubuntu_64_lts_12_04  main_ubuntu_64_lts_12_04_musl  redir_diet_goodbye_world.sh  test.sh
examples/jsondump/: jsondump-clang  jsondump-diet-clang  jsondump-diet-gcc  jsondump-gcc  jsondump-musl  jsondump.md
examples/nweb/: .gitignore  Makefile  README.md
examples/picoc/: picoc-clang  picoc-diet-c99  picoc-gcc  picoc.md
examples/tests/: README.md  fib_test.1234  fib_test.123456  fib_test.1234_123456.gpr_map  fib_test.1234_123456.rip_map  fib_test.c  identity.gpr_map  notes.txt  xor-nof.bc_map  xor-nof.c  xor-nof.rip_map  xor-nof1  xor-nof2  xorshift.1234  xorshift.123456  xorshift.1234_123456.gpr_map  xorshift.1234_123456.rip_map  xorshift.c
examples/xml-parser/: xml-parser-clang  xml-parser-diet-clang  xml-parser-diet-gcc  xml-parser-gcc  xml-parser-musl  xml-parser.md
libreopt/: Makefile  generate.sh
libreopt/src/: reopt.MemCopy.iN.ll  reopt.MemSet.iN.ll  reopt.SystemCall.FreeBSD.ll  reopt.SystemCall.Linux.ll  reopt.SystemCall.linux.ll
llvm-merge-example/: Assembler.hs  Makefile  README.md  RangeSet.hs  Relink.hs  data.c  data.h  mk.sh  original-tree  original-tree.ll  tree.c  tree.ll
llvm-merge-example-ubuntu/: Makefile  README.md  data.c  mk.sh  tree.c
llvm-merge-example-ubuntu/example/: latest.txt
llvm-merge-example/musl/: freebsd-musl.sh
llvm-testbed/: Makefile  README.md  main.c  memcmp_4004ec.ll  memcmp_4004ec.s
make_bsd_syscalls/: Main.hs  syscalls.master.cpp
make_linux_syscalls/: Main.hs  README  asm_syscalls.h.cpp  syscall_64.tbl  syscalls.h.cpp
radss_compare/: Main_radss_compare.hs
reopt/: Assembler.hs  Main_reopt.hs
reopt-explore/: CommandLine.hs  Common.hs  GroundTruth.hs  LLVM.hs  Main_explore.hs  Residual.hs
reopt-relink/: Main_relink.hs
reopt-vcg/: .gitignore  LICENSE  README.md  reopt-vcg.cabal
reopt-vcg/app/: LLVMLoader.hs  Main.hs  VCGCommon.hs  VCGMacaw.hs
reopt_sym_test/: Main_reopt.hs
reopt_test/: Main_reopt.hs  SignalUtils.hs
scratch/: shed.h
scripts/: checkout_repos.sh  freebsd_binutils.sh  linux_binutils.sh  reopt_explore_tests.sh  run_graphmod.sh  run_reopt.sh  run_residuals.sh  test_reopt.sh  test_reopt_explore.sh  test_reopt_with_relink.sh  unpack_benchmarks.sh
src/: .Reopt.hs.swp  Reopt.hs
src/Reopt/: CFG.hs  (+24 more)
stats/: .gitignore  pyproject.toml
stats/stats/: __init__.py  grammatech.py  main.py  sheets.py
stats/tests/: test_stats.py
support/: .gitignore  Makefile  README  abi_test.c  arg_convention.c  avx_intrin.512.c  llvm_return_test.ll  print_csize_info.c  print_stackheap_addrs.c  return_convention.ll
tests/: ElfX64Linux.hs  Main.hs  README.rst  ReoptTests.hs  TyConstraintTests.hs  plan.org
tools/: README.md  reopt-tools.cabal
tools/dump_debug_data/: Main.hs
tools/dump_vtables/: Main.hs
tools/match-phdr/: README.md
tools/match-phdr/src/: Main.hs
tools/reopt-checker/: README.md  reopt-checker.cabal
tools/reopt-checker/src/: Main.hs
tools/utils/: LLVMDumpInstr.hs  cleaner.py  concrete-dump.sh  dump_bytes.sh  llvm-dump.sh  mkbin.sh
typegen-test-programs/: Makefile  README.md  byte_loop.c  make_in_docker.sh  mixed_struct_pointer.c  nested_mutual_rec_types.c  nested_struct_ptr.c  nested_struct_ptr2.c  simple_pointer.c  test.h  union_argument.c  union_in_struct.c
utils/: ConcreteDumpInstr.hs  LLVMDumpInstr.hs  cleaner.py  compare.sh  diffcleaner.py
vcg-test-programs/: .gitignore  Makefile  README  run.sh  test_add.bc  test_add.c  test_add.manifest  test_add_diet_lld.ann  test_add_diet_reopt_manual.ann  test_add_protos.h  test_add_reopt_manual.ann  test_fib.bc  test_fib.c  test_fib.manifest  test_fib_diet_lld.ann  test_fib_diet_reopt.ann  test_fib_diet_reopt_manual.ann  test_fib_protos.h  test_fpadd.c  test_fpadd_protos.h
vscode-plugin/: .eslintignore  .eslintrc.json  .gitignore  .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  reopt-0.0.1.vsix  tsconfig-common.json  tsconfig-webview.json  tsconfig.json  webpack.config.ts
(+438 files in other folders)
