name: reopt
version: 0.1.0
author: Galois, Inc.
maintainer: jhendrix@galois.com
build-type: Simple
cabal-version: >= 1.10
license:       BSD3
license-file:  LICENSE

flag enable-hpc
  Description: Collect HPC coverage information.
  Default: False

flag enable-arm
  Description: Enable support for ARM binaries
  Default: False

library
  default-language: Haskell2010
  build-depends:
    base >= 4,
    aeson,
    bytestring,
    containers,
    elf-edit >= 0.40,
    flexdis86 >= 0.1.1,
    hashable,
    language-c,
    lens,
    llvm-pretty >= 0.11.0,
    macaw-base >= 0.3.15.2,
    macaw-x86 >= 0.3.1,
    mtl,
    parameterized-utils >= 2.0.0.0.102,
    pretty,
    prettyprinter,
    process,
    reopt-vcg-ann,
    text,
    transformers,
    unix,
    unordered-containers,
    utf8-string,
    vector

  hs-source-dirs: src

  exposed-modules:
    Reopt
    Reopt.Analysis.Domains.DiffEquations
    Reopt.AnnotatedTypes
    Reopt.ArgResolver
    Reopt.CFG.FnRep
    Reopt.CFG.FnRep.X86
    Reopt.CFG.FunctionCheck
    Reopt.CFG.LLVM
    Reopt.CFG.LLVM.X86
    Reopt.CFG.Recovery
    Reopt.CFG.StackDepth
    Reopt.ExternalTools
    Reopt.Header
    Reopt.Hints
    Reopt.Relinker
    Reopt.Relinker.Object
    Reopt.Relinker.Redirection
    Reopt.Relinker.Relations
    Reopt.Relinker.Relocations
    Reopt.Utils.Hex
    Reopt.Utils.Printf

  if flag(enable-arm)
    cpp-options: -DSUPPORT_ARM
    build-depends:
      hvex,
      macaw-arm-vex >= 0.1.0

  ghc-prof-options: -O2 -fprof-auto-top

executable reopt
  default-language: Haskell2010
  build-depends:
    base >= 4,
    aeson,
    bytestring >= 0.10.8.0,
    containers,
    cmdargs,
    elf-edit,
    filepath,
    lens,
    macaw-base,
    macaw-x86,
    parameterized-utils >= 0.1.6,
    prettyprinter,
    unordered-containers,
    reopt,
    reopt-vcg-ann

  hs-source-dirs: reopt
  main-is: Main_reopt.hs
  other-modules:
    Paths_reopt

  if flag(enable-hpc)
    ghc-options: -fhpc

  ghc-prof-options: -O2 -fprof-auto-top

executable reopt-relink
  default-language: Haskell2010
  build-depends:
    base >= 4,
    cmdargs,
    yaml,
    reopt

  hs-source-dirs: reopt-relink
  main-is: Main_relink.hs
  other-modules: Paths_reopt

  if flag(enable-hpc)
    ghc-options: -fhpc

  ghc-options: -Wall
  ghc-prof-options: -O2 -fprof-auto-top

test-suite reopt-tests
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options: -Wall
  main-is: Main.hs
  other-modules: ReoptTests
  hs-source-dirs: tests
  build-depends:
    base,
    bytestring,
    containers,
    elf-edit,
    exceptions,
    filemanip,
    filepath,
    macaw-base,
    prettyprinter,
    reopt,
    temporary,
    tasty,
    tasty-hunit,
    unordered-containers
