cabal-version: 2.2

name: reopt
version: 0.1.0
author: Galois, Inc.
maintainer: val@galois.com
build-type: Simple
license: BSD-3-Clause
license-file:  LICENSE

common extensions
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveGeneric
    DeriveTraversable
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    NamedFieldPuns
    RankNTypes
    ScopedTypeVariables
    TypeApplications

flag enable-hpc
  Description: Collect HPC coverage information.
  Default: False

flag enable-arm
  Description: Enable support for ARM binaries
  Default: False

library
  import: extensions

  default-language: Haskell2010
  build-depends:
    base >= 4,
    aeson > 2 && < 3,
    attoparsec,
    base64,
    bytestring,
    containers,
    directory,
    elf-edit >= 0.40,
    extra,
    filepath,
    flexdis86 >= 0.1.1,
    galois-dwarf >= 0.2.2,
    generic-lens,
    hashable < 1.4,
    language-c >= 0.9.2,
    lens,
    llvm-pretty >= 0.11.0,
    macaw-base >= 0.3.15.6,
    macaw-x86 >= 0.3.1,
    mtl,
    parameterized-utils >= 2.1.3.0.100,
    pretty,
    prettyprinter,
    process,
    reopt-vcg-ann,
    scientific,
    temporary,
    text,
    transformers,
    unix,
    unordered-containers,
    utf8-string,
    vector,
    GraphSCC

  hs-source-dirs: src

  exposed-modules:
    Reopt
    Reopt.CFG.FnRep
    Reopt.CFG.FnRep.X86
    Reopt.CFG.LLVM
    Reopt.EncodeInvariants
    Reopt.Events
    Reopt.Events.Export
    Reopt.ExternalTools
    Reopt.Occam
    Reopt.PltParser
    Reopt.Relinker.Binary
    Reopt.Server
    Reopt.TypeInference.Solver
    Reopt.TypeInference.Solver.Constraints
    Reopt.TypeInference.Solver.Monad
    Reopt.TypeInference.Solver.Solver
    Reopt.TypeInference.Solver.RowVariables
    Reopt.TypeInference.Solver.Finalise
    Reopt.TypeInference.Solver.TypeVariables
    Reopt.TypeInference.Solver.Types
    Reopt.TypeInference.Solver.UnionFindMap
    Reopt.TypeInference.ConstraintGen
    Reopt.TypeInference.FunTypeMaps
    Reopt.TypeInference.Pretty
    Reopt.Utils.Dir
    Reopt.Utils.Exit
  other-modules:
    Reopt.Analysis.Domains.DiffEquations
    Reopt.ArgResolver
    Reopt.CFG.FunctionCheck
    Reopt.CFG.LLVM.X86
    Reopt.CFG.Recovery
    Reopt.CFG.StackDepth
    Reopt.FunUseMap
    Reopt.Hints
    Reopt.Relinker
    Reopt.Relinker.Constants
    Reopt.Relinker.NewBinary
    Reopt.Relinker.NewLayout
    Reopt.Relinker.NewSymtab
    Reopt.Relinker.Redirection
    Reopt.Relinker.Relations
    Reopt.Relinker.Relocations
    Reopt.TypeInference.DebugTypes
    Reopt.TypeInference.Header
    Reopt.TypeInference.HeaderTypes
    Reopt.Utils.Flags
    Reopt.Utils.Folds
    Reopt.Utils.Hex
    Reopt.Utils.Printf

  if flag(enable-arm)
    cpp-options: -DSUPPORT_ARM
    build-depends:
      hvex,
      macaw-arm-vex >= 0.1.0

  ghc-options: -Wall -Werror
  ghc-prof-options: -O2 -fprof-auto-top

executable reopt
  import: extensions
  default-language: Haskell2010
  build-depends:
    base >= 4,
    aeson,
    bytestring >= 0.10.8.0,
    containers,
    directory,
    cmdargs,
    elf-edit,
    filepath,
    lens,
    macaw-base,
    macaw-x86,
    mtl,
    parameterized-utils >= 0.1.6,
    prettyprinter,
    text,
    unordered-containers,
    reopt,
    reopt-vcg-ann

  hs-source-dirs: reopt
  main-is: Main_reopt.hs
  other-modules:
    Paths_reopt

  ghc-options: -Wall -Werror
  if flag(enable-hpc)
    ghc-options: -fhpc

  ghc-prof-options: -O2 -fprof-auto-top

executable reopt-explore
  import: extensions
  default-language: Haskell2010
  build-depends:
    ansi-wl-pprint,
    base >= 4,
    bytestring,
    cmdargs,
    containers,
    directory,
    elf-edit,
    filepath,
    flexdis86,
    IntervalMap,
    lens,
    macaw-base,
    macaw-x86,
    mtl,
    optparse-applicative,
    parameterized-utils >= 0.1.6,
    reopt,
    unix,
    vector

  hs-source-dirs: reopt-explore
  main-is: Main_explore.hs
  other-modules: Paths_reopt
               , CommandLine
               , Residual
               , Residual.Recognizers
               , LLVM
               , Common

  if flag(enable-hpc)
    ghc-options: -fhpc

  ghc-options: -Wall -Werror
  ghc-prof-options: -O2 -fprof-auto-top

executable reopt-relink
  import: extensions
  default-language: Haskell2010
  build-depends:
    base >= 4,
    cmdargs,
    yaml,
    reopt

  hs-source-dirs: reopt-relink
  main-is: Main_relink.hs
  other-modules: Paths_reopt

  if flag(enable-hpc)
    ghc-options: -fhpc

  ghc-options: -Wall
  ghc-prof-options: -O2 -fprof-auto-top

test-suite reopt-tests
  import: extensions
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options: -Wall
  main-is: Main.hs
  other-modules:
    ReoptTests
    TyConstraintTests
  hs-source-dirs: tests
  build-depends:
    base,
    bytestring,
    containers,
    elf-edit,
    exceptions,
    filemanip,
    filepath,
    macaw-base,
    prettyprinter,
    reopt,
    tasty,
    tasty-hunit,
    unordered-containers
