[tool.poetry]
name = "stats"
version = "0.1.0"
description = ""
authors = ["Valentin Robert <val@galois.com>"]

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.65.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.10.0"

[tool.poetry.scripts]
stats = "stats:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
