name: reopt-tools
version: 0.0.1
author: Galois, Inc.
maintainer: jhendrix@galois.com
build-type: Simple
cabal-version: >= 1.9.2

flag enable-hpc
  Description: Collect HPC coverage information.
  Default: False

flag enable-arm
  Description: Enable support for ARM binaries
  Default: False

executable LLVMDumpInstr
  build-depends:
    base >= 4,
    ansi-wl-pprint,
    binary,
    bytestring,
    containers,
    flexdis86,
    lens,
    llvm-pretty,
    macaw-base,
    macaw-x86,
    mtl,
    parameterized-utils,
    reopt

  hs-source-dirs: utils
  main-is: LLVMDumpInstr.hs

executable dump_debug_data
  build-depends:
    base >= 4,
    bytestring,
    elf-edit,
    macaw-base,
    reopt
  hs-source-dirs: dump_debug_data
  main-is: Main.hs

executable dump_vtables
  build-depends:
    ansi-wl-pprint,
    base >= 4,
    bytestring,
    containers,
    directory,
    elf-edit,
    lens,
    macaw-base,
    parameterized-utils,
    reopt,
    split,
    vector
  hs-source-dirs: dump_vtables
  main-is: Main.hs